Optimized buttons, initial spacing fix

--- a/styles/about-contact.css
+++ b/styles/about-contact.css
@@ -106,7 +106,8 @@ header h3 {
 
 /* about-container styles */
 .about-container h3 {
-  margin-bottom: 1rem
+  margin-bottom: 1rem;
+  margin-top: 2rem;
 }
 
 .about-container p {
