--- a/styles/style.css
+++ b/styles/style.css
@@ -35,23 +35,30 @@ a:active, .nav-menu a:active {
   color: #DE9B43;
 }
 
-button a {
+a.btn {
   color: #fff;
 }
 
-button a:active {
-  color: #43A6DE;
+a.btn:hover {
+  background-color: #43A6DE;
+  cursor: pointer;
 }
 
-button, .form button {
+a.btn:active {
+  color: #000;
+}
+
+button, .btn, .form button {
   background-color: #DE9B43;
   border-style: none;
   box-shadow: 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.25);
   font-family: "Signika", sans-serif;
   font-size: 1.25rem;
-  height: 2rem;
-  max-width: 400px;
+  height: 2.5rem;
+  text-align: center;
+  padding: 10px;
   width: 90%;
+  max-width: 350px;
 }
 
 #submit {
@@ -76,24 +83,20 @@ h3, h4, h5 {
 h1 {
   font-size: 3rem;
   font-weight: 600;
-  line-height: 4rem;
 }
 
 h2 {
   font-size: 2.25rem;
   font-weight: 400;
-  line-height: 2.5rem;
 }
 
 h3 {
   font-size: 1.75rem;
-  line-height: 2.25rem;
 }
 
 h4 {
   font-size: 1.5rem;
   font-weight: 300;
-  line-height: 3.125rem;
 }
 
 h5 {
@@ -129,7 +132,7 @@ nav img {
 
 nav {
   height: 4.5rem;
-  margin: 2rem auto;
+  margin: 1rem auto;
   max-width: 90%;
 }
 
@@ -137,7 +140,7 @@ nav {
   color: #fff;
   float: right;
   font-size: 1rem;
-  margin-left: 4rem;
+  margin-left: 2rem;
   padding-top: 1.25rem;
 }
 
@@ -218,7 +221,6 @@ footer {
 @media screen and (max-width: 600px) {
   .footer-icons img {
     padding-left: 0.5rem;
-
   }
 }
 
@@ -226,6 +228,7 @@ footer {
 /* header animation */
 .changing-word span {
   animation: "fade" 12s infinite;
+  -moz-animation: "fade" 12s infinite;
   -ms-animation: "fade" 12s infinite;
   -webkit-animation: "fade" 12s infinite;
   color: #DE9B43;
@@ -235,16 +238,19 @@ footer {
 }
 .changing-word span:nth-child(2) {
   animation-delay: 3s;
+  -moz-animation-delay: 3s;
   -ms-animation-delay: 3s;
   -webkit-animation-delay: 3s;
 }
 .changing-word span:nth-child(3) {
   animation-delay: 6s;
+  -moz-animation-delay: 3s;
   -ms-animation-delay: 6s;
   -webkit-animation-delay: 6s;
 }
 .changing-word span:nth-child(4) {
   animation-delay: 9s;
+  -moz-animation-delay: 3s;
   -ms-animation-delay: 9s;
   -webkit-animation-delay: 9s;
 }
@@ -275,24 +281,23 @@ footer {
 
 /* projects */
 .projects > div {
-  padding-bottom: 2rem;
+  padding: 1.75rem;
 }
 
 .projects > div img {
   display: block;
   margin: 0 auto;
-  padding-top: 2rem;
 }
 
 .projects > div h4 {
   color: #fff;
   font-weight: 400;
   margin: 0.5rem;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
-.projects > div button {
+.projects > div .btn, div button {
   display: block;
   margin: 0 auto;
 }
@@ -388,9 +393,10 @@ footer {
   font-size: 1.25rem;
   line-height: 2rem;
   margin: auto 10%;
+  text-align: center;
 }
 
-.contact-footer button {
+.contact-footer .btn {
   display: block;
   margin: 1rem auto;
 }
